--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,9 @@
         tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus.">
   Simple demo
 </button>
+<button type="button" class="btn btn-primary"
+        tooltip="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+        placement="right">
+  Right demo
+</button>
 <router-outlet></router-outlet>
