Se realizo front para ventas aun puede tener posibles modificaciones

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -12,7 +12,7 @@
         <li class="nav-item btn-group" dropdown>
 					<a id="venta-action" class="nav-link dropdown-toggle" dropdownToggle aria-controls="venta-menu">Ventas</a>
 						<ul id="venta-menu" class="dropdown-menu" *dropdownMenu role="menu" aria-labelledby="venta-action">
-							<li><a class="dropdown-item" href="#">Nueva venta</a></li>
+							<li><a class="dropdown-item" routerLink="/ventas" routerLinkActive="active">Nueva venta</a></li>
 						</ul>
 				</li>
 				<li class="nav-item btn-group" dropdown>
