--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,29 +1,34 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg background">
   <div class="container-fluid">
     <a class="navbar-brand">
-      <img src="logo.webp" alt="Logo" height="50" class="d-inline-block align-text-center">
-      Ferreteria Perez
+      <img src="logo.avif" alt="Logo" height="30" class="d-inline-block align-text-center">
     </a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/inicio" routerLinkActive="active">Inicio</a>
+          <a class="nav-link text-light" aria-current="page" routerLink="/inicio" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]="{exact: true}">Inicio</a>
         </li>
         <li class="nav-item btn-group" dropdown>
-					<a id="venta-action" class="nav-link dropdown-toggle" dropdownToggle aria-controls="venta-menu">Ventas</a>
+					<a id="venta-action" class="nav-link dropdown-toggle text-light" dropdownToggle aria-controls="venta-menu">Ventas</a>
 						<ul id="venta-menu" class="dropdown-menu" *dropdownMenu role="menu" aria-labelledby="venta-action">
-							<li><a class="dropdown-item" routerLink="/ventas" routerLinkActive="active">Nueva venta</a></li>
+							<li><a class="dropdown-item" routerLink="/ventas" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]="{exact: true}">Nueva venta</a></li>
 						</ul>
 				</li>
 				<li class="nav-item btn-group" dropdown>
-					<a id="catalogo-action" class="nav-link dropdown-toggle" dropdownToggle aria-controls="catalogo-menu">Catálogos</a>
+					<a id="catalogo-action" class="nav-link dropdown-toggle text-light" dropdownToggle aria-controls="catalogo-menu">Catálogos</a>
 						<ul id="catalogo-menu" class="dropdown-menu" *dropdownMenu role="menu" aria-labelledby="catalogo-action">
-							<li><a class="dropdown-item" routerLink="/productos" routerLinkActive="active">Productos</a></li>
-							<li><a class="dropdown-item" routerLink="/servicios" routerLinkActive="active">Servicios</a></li>
+							<li><a class="dropdown-item" routerLink="/productos" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]="{exact: true}">Productos</a></li>
+							<li><a class="dropdown-item" routerLink="/servicios" routerLinkActive="active" ariaCurrentWhenActive="page" [routerLinkActiveOptions]="{exact: true}">Servicios</a></li>
 						</ul>
 				</li>
       </ul>
     </div>
+		<li class="nav-item btn-group" dropdown>
+			<a id="catalogo-action" class="nav-link dropdown-toggle text-light" dropdownToggle aria-controls="catalogo-menu">{{user()?.nombre}}</a>
+				<ul id="catalogo-menu" class="dropdown-menu" *dropdownMenu role="menu" aria-labelledby="catalogo-action">
+					<li><a class="dropdown-item" (click)="logout()">Cerrar sesión</a></li>
+				</ul>
+		</li>
   </div>
 </nav>
 <main class="p-2">
